Fix issues on mobile
Mobile chrome on iOS and mobile Safari both auto-zoom for inputs w/font size < 16px, and autocapitalize the first letter on inputs. This should hopefully fix that, gotta send it heroku to test and make sure.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,68 +1,75 @@
-#editor {
-    min-height:200px;
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
+    //Do this because by default, mobile Safari (and mobile Chrome) auto-zoom on inputs which don't have a "sufficient font size."
+    //16 is currently considered a sufficient font size and as such those browsers will no longer auto-zoom when inputs have that font size.
+    //Full details: http://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
+    font-size: 16px;
 }
 
-.button-right{
-    float:right;
+#editor {
+    min-height: 200px;
+}
+
+.button-right {
+    float: right;
     margin-bottom: 3px;
 }
 
-.page-title-container{
+.page-title-container {
     overflow: auto;
     text-align: center
 }
 
-.row{
-  margin-top:5px;
+.row {
+    margin-top: 5px;
 }
 
 .curl_cmd_container {
-  left:auto;
-  transform:0;
-  position:fixed;
-  bottom:0px;
-  z-index: 10;
+    left: auto;
+    transform: 0;
+    position: fixed;
+    bottom: 0px;
+    z-index: 10;
 }
 
 .curl_cmd_container_placeholder {
-  height: 140px;
+    height: 140px;
 }
 
 .curl_cmd_well {
-  background: #d9d9d9;
-  border: 1px solid;
-  padding-top:5px;
-  padding-bottom:5px;
-  border-radius:10px;
+    background: #d9d9d9;
+    border: 1px solid;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 10px;
 }
 
-.compact-row{
-  margin-top:0;
-  margin-bottom:0;
+.compact-row {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-#curl_cmd{
+#curl_cmd {
     resize: none;
 }
 
-@media(max-width:767px){}
-@media(min-width:768px){
-  .header .header-input{
-    width:49%;
-  }
+@media(max-width:767px) {}
 
-  .query-param .query-param-input{
-    width:49%;
-  }
-
-  .auth .auth-input{
-    width:49%;
-  }
-
-  .curl_cmd_container {
-    left: 50%;
-    transform: translateX(-50%);
-  }
+@media(min-width:768px) {
+    .header .header-input {
+        width: 49%;
+    }
+    .query-param .query-param-input {
+        width: 49%;
+    }
+    .auth .auth-input {
+        width: 49%;
+    }
+    .curl_cmd_container {
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
-@media(min-width:992px){}
-@media(min-width:1200px){}
+
+@media(min-width:992px) {}
+
+@media(min-width:1200px) {}
